--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,64 @@
-# top level stuff you probably don't need to touch
-highlighter: rouge
-markdown: rdiscount
-rdiscount:
-  extensions: [smart]
-permalink: /:title.html
-paginate: 5
-port: 3000
-safe: true
+# Harmony Jekyll theme general configurations 
 
+# Base URL
+baseurl: /harmony
 
-# edit here to achieve your personal greatness
-url: http://stevenwante.github.io/
-baseurl: /
-title: Steven Wante
-author: Steven Wante
-description: Personal blog and resume
-avatar: profile.png
-email: me@stevenwante.com
-github: stevenwante
-twitter: stevenwante
-linkedin: stevenwante
-#disqus: username
-google_analytics: UA-69944665-1
+# Site live URL
+# url: http://gayan.me
+
+# Localhost 
+url: http://127.0.0.1:4000  
+
+# Harmony theme configuration. Please change accordingly.
+harmony:
+  name: Steven Wante
+  # Little description about your site
+  description: Aspiring Security Guru.
+  # 'meta_description:' Write an awesome description for your new site here.
+  # It will appear in your document head meta (for Google search results) and 
+  # in your feed.xml site description.
+  meta_description: > # 
+   Harmony is a free responsive jekyll theme by Gayan Virajith
+   and Maheshika Lakmali. Sourced on Github - 
+   https://github.com/gayanvirajith/harmony
+  basetheme: theme-base-01 # pre defined thmes are darken, blue-water, redish.
+  author: # Author details
+    name: Steven Wante
+    email: me@stevenwante.com
+    url: http://stevenwante.github.io
+
+  # Google Analytics key, leave blank to ignore
+  google_analytics_key: UA-xxxx-x
+
+  # Profile links, leave blank to ignore
+  social: 
+    github: stevenwante
+    twitter: stevenwante
+    facebook:
+    gplus:
+    dribble:
+    pinterest: 
+  # Toggle disclaimer in footer
+  show_disclaimer: true
+
+# Conversion / Build settings 
+markdown:    kramdown
+# This is how you put pygments config in jekyll 2.0 instead of pygments: true
+highlighter: pygments 
+
+# Permalinks
+permalink: pretty
+
+exclude: 
+  - CNAME
+  - Gemfile
+  - Rakefile
+  - README.md
+  - .gitignore
+  - .sass-cache
+  - Gemfile.lock
+
+# Sass conversion configs
+sass:
+    sass_dir: assets/css/_sass
+    style: :compressed
