--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: http://127.0.0.1:4000
 harmony:
   name: Steven Wante
   # Little description about your site
-  description: Aspiring Security Guru.
+  description: Aspiring Network Security Expert.
   # 'meta_description:' Write an awesome description for your new site here.
   # It will appear in your document head meta (for Google search results) and 
   # in your feed.xml site description.
