--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl: 
 
 # Site live URL
-url: http://stevenwante.github.io
+url: http://stevenwante.com
 
 # Localhost 
 # url: http://127.0.0.1:4000  
@@ -28,7 +28,7 @@ harmony:
     url: http://stevenwante.github.io
 
   # Google Analytics key, leave blank to ignore
-  google_analytics_key: UA-xxxx-x
+  google_analytics_key: UA-69944665-1
 
   # Profile links, leave blank to ignore
   social: 
